[gd_scene load_steps=8 format=2]

[ext_resource path="res://baddude.gd" type="Script" id=1]
[ext_resource path="res://AI.gd" type="Script" id=2]
[ext_resource path="res://Characters/assets/purple1.png" type="Texture" id=3]
[ext_resource path="res://Characters/assets/black1.png" type="Texture" id=4]
[ext_resource path="res://Characters/assets/blue1.png" type="Texture" id=5]
[ext_resource path="res://Characters/assets/fox.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.7941, 16.1765 )

[node name="badguy" type="KinematicBody2D" groups=["enemy"]]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollShapeGreen" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2( -3.25592, 4.46854 )
shape = SubResource( 2 )

[node name="CollShapeBlue" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.118595, -0.187073 )
rotation = 3.14159
scale = Vector2( 1.18929, -6.93138 )
shape = SubResource( 2 )
disabled = true

[node name="CollShapeBlack" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.0240936, -0.190948 )
rotation = 3.12827
scale = Vector2( 1.18929, -6.93138 )
shape = SubResource( 2 )
disabled = true

[node name="CollShapePurple" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1.17434, 0.374649 )
rotation = -3.14159
scale = Vector2( 2.69599, -4.36777 )
shape = SubResource( 2 )
disabled = true

[node name="AI" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="fieldOfVision" type="Area2D" parent="AI"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="AI/fieldOfVision"]
position = Vector2( 0, -1 )
rotation = 0.00243163
scale = Vector2( 2.01447, 1.22517 )
polygon = PoolVector2Array( -69.1008, -67.4696, -71.3776, 71.2962, 579.918, 75.2219, 578.207, -74.955, 130.448, -73.1648, 65.8193, -137.387, 6.84348, -71.8543 )

[node name="idleMovementTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="SpriteGreen" type="Sprite" parent="."]
visible = false
position = Vector2( -27, -40 )
rotation = 0.0112663
scale = Vector2( 0.237545, 0.275716 )
texture = ExtResource( 6 )

[node name="SpriteBlue" type="Sprite" parent="."]
visible = false
position = Vector2( 2.44892, 2.38625 )
rotation = 0.0112663
scale = Vector2( 0.237545, 0.275716 )
texture = ExtResource( 5 )

[node name="SpritePurple" type="Sprite" parent="."]
visible = false
position = Vector2( 1.50469, -14.052 )
rotation = 0.0112663
scale = Vector2( 0.237545, 0.275716 )
texture = ExtResource( 3 )

[node name="SpriteBlack" type="Sprite" parent="."]
visible = false
position = Vector2( -1.69376, -0.617615 )
rotation = 0.0112663
scale = Vector2( 0.237545, 0.275716 )
texture = ExtResource( 4 )

[connection signal="body_entered" from="AI/fieldOfVision" to="AI" method="_on_fieldOfVision_body_entered"]
[connection signal="body_exited" from="AI/fieldOfVision" to="AI" method="_on_fieldOfVision_body_exited"]
[connection signal="timeout" from="idleMovementTimer" to="." method="_on_idleMovementTimer_timeout"]
